--- a/WearFPSForms/Properties/Settings.settings
+++ b/WearFPSForms/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="firstRun" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="version" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
