--- a/WearFPSForms/WearFPSForms.csproj
+++ b/WearFPSForms/WearFPSForms.csproj
@@ -118,19 +118,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Exceptions.cs" />
-    <Compile Include="FirewallHelper.cs" />
+    <Compile Include="Helpers\FirewallHelper.cs" />
     <Compile Include="HardwareMonitor.cs" />
-    <Compile Include="Log.cs" />
+    <Compile Include="Helpers\INIHelper.cs" />
+    <Compile Include="Helpers\Log.cs" />
     <Compile Include="MyWebClient.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="NativeMethods.cs" />
-    <Compile Include="Networking.cs" />
+    <Compile Include="Helpers\NativeMethods.cs" />
+    <Compile Include="Net\Networking.cs" />
+    <Compile Include="Net\UdpBroadcastReceiver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RTSS.cs" />
     <Compile Include="RTSS_Structs.cs" />
-    <Compile Include="Settings.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
