--- a/WearFPSForms/WearFPSForms.csproj
+++ b/WearFPSForms/WearFPSForms.csproj
@@ -102,6 +102,10 @@
     <TargetZone>LocalIntranet</TargetZone>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Google.Protobuf, Version=3.0.0.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
+      <HintPath>..\packages\Google.Protobuf.3.0.0-beta3\lib\dotnet\Google.Protobuf.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="hardware">
       <HintPath>..\..\..\..\..\Desktop\openhardwaremonitor-master\Bin\Release\hardware.dll</HintPath>
     </Reference>
@@ -119,7 +123,7 @@
   <ItemGroup>
     <Compile Include="Exceptions.cs" />
     <Compile Include="Helpers\FirewallHelper.cs" />
-    <Compile Include="HardwareMonitor.cs" />
+    <Compile Include="Hardware\HardwareMonitor.cs" />
     <Compile Include="Helpers\INIHelper.cs" />
     <Compile Include="Helpers\Log.cs" />
     <Compile Include="MyWebClient.cs">
@@ -130,6 +134,7 @@
     <Compile Include="Net\UdpBroadcastReceiver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Protobuf\WearFpsProto.cs" />
     <Compile Include="RTSS.cs" />
     <Compile Include="RTSS_Structs.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -143,6 +148,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.manifest" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -198,6 +204,7 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
