--- a/WearFPSForms/WearFPSForms.csproj
+++ b/WearFPSForms/WearFPSForms.csproj
@@ -121,6 +121,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomConsole.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CustomConsole.Designer.cs">
+      <DependentUpon>CustomConsole.cs</DependentUpon>
+    </Compile>
     <Compile Include="Exceptions.cs" />
     <Compile Include="Helpers\FirewallHelper.cs" />
     <Compile Include="Hardware\HardwareMonitor.cs" />
@@ -131,15 +137,20 @@
     </Compile>
     <Compile Include="Helpers\NativeMethods.cs" />
     <Compile Include="Net\Client.cs" />
-    <Compile Include="Net\Connection.cs" />
+    <Compile Include="Net\Clients.cs" />
+    <Compile Include="Net\TcpServer.cs" />
     <Compile Include="Net\LocalInterfaces.cs" />
     <Compile Include="Net\Networking.cs" />
     <Compile Include="Net\UdpBroadcastReceiver.cs" />
+    <Compile Include="Net\UdpDataSender.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protobuf\WearFpsProto.cs" />
     <Compile Include="RTSS.cs" />
     <Compile Include="RTSS_Structs.cs" />
+    <EmbeddedResource Include="CustomConsole.resx">
+      <DependentUpon>CustomConsole.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
